--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
 
     <header>
         <nav>
-            <a href="/index.html" class="logo-font">
-                <img src="images/logo.png" alt="Logo" >
+            <a class="logo-font">
                 <span class="logo-text">Studio</span>
             </a>
 
             <ul>
                 <li>
                
-                    <a href="/index.html" class="page-names"> Studio</a></li>
+                    <a href="./index.html" class="page-names"> Studio</a></li>
                   <li>  <a href="" class="page-names">Portfolio</a></li>
                 <li> <a href="" class="page-names">Contacts</a></li>
                
