--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
 <address class="contact-info">
     <ul>
-        <li> <a href="" class="page-names">info@devstudio.com</a></li>
-        <li> <a href="" class="page-names">+11 (000) 111-11-11</a></li>
+        <li> <a href="" class="contact-names">info@devstudio.com</a></li>
+        <li> <a href="" class="contact-names">+11 (000) 111-11-11</a></li>
     </ul>
 </address>
     </header>
