--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
     </header>
     
 
-<section class="hero-image">
+<section class="sec_class1">
 
-    <h1 class="hero-text">Effective Solutions
+    <h1 class="header-class">Effective Solutions
     for Your Business</h1>
 
-    <button class="order-button">Get Order</button>
+    <button class="button-class">Get Order</button>
 
 </section>
 
