--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
 <section class="sec_class1">
 
-    <h1 class="header-class">Effective Solutions
+    <h1>Effective Solutions
     for Your Business</h1>
 
-    <button class="button-class">Get Order</button>
+    <button>Get Order</button>
 
 </section>
 
