--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
     </header>
     
 
-<section class="sec_class1">
+<section class="section-bir">
 
     <h1>Effective Solutions
     for Your Business</h1>
-
     <button>Get Order</button>
 
 </section>
