--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
 
     
-      <section class="section-bir">
+      <section class="section_bir">
         <h1>Effective Solutions for Your Business</h1>
         <button>Get Order</button>
       </section>
