--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
-  <>
+  <body>
     <header>
       <nav>
         <a class="logo-font">
