--- a/index.html
+++ b/index.html
@@ -47,43 +47,43 @@
       </address>
     </header>
 
-    
+    <!-- Section 1-->
       <section class="section_bir">
-        <h1>Effective Solutions for Your Business</h1>
-        <button>Get Order</button>
+        <h1 class="hero-text">Effective Solutions for Your Business</h1>
+        <button class="order-button">Get Order</button>
       </section>
     
 
-   
+   <!-- Section 2-->
     <section>
       <ul>
         <li>
-          <h3 class="features-header">Strategy</h3>
+          <h3 class="small-header">Strategy</h3>
           <p class="features-text">
             Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
           </p>
           <h3 class="features-header">Punctuality</h3>
-          <p class="features-text">
+          <p class="small-header">
             Bring the key message to the brand's audience for the best price
             within the shortest possible time.
           </p>
           <h3 class="features-header">Diligence</h3>
-          <p class="features-text">
+          <p class="small-header">
             Research and confirm brands that present the strongest digital
             growth opportunities and minimize risk.
           </p>
           <h3 class="features-header">Technologies</h3>
-          <p class="features-text">
+          <p class="small-header">
             Design practice focused on digital experiences. We bring forth a
             deep passion for problem-solving.
           </p>
         </li>
       </ul>
     </section>
-
+<!-- Section 3-->
     <section class="team-info">
-      <h2 class="big-header">Our Team</h2>
+      <h2 class="medium-header">Our Team</h2>
       <ul>
         <li class="team-cards">
           <img
@@ -92,13 +92,13 @@
             width="264"
             height="260"
           />
-          <h3 class="medium-header">Mark Guerrero</h3>
+          <h3 class="small-header">Mark Guerrero</h3>
           <p class="small-text">Product Designer</p>
         </li>
 
         <li class="team-cards">
           <img src="images/tom.jpg" alt="Tom Ford" width="264" height="260" />
-          <h3 class="medium-header">Tom Ford</h3>
+          <h3 class="small-header">Tom Ford</h3>
           <p class="small-text">Frontend Developer</p>
         </li>
 
@@ -109,7 +109,7 @@
             width="264"
             height="260"
           />
-          <h3 class="medium-header">Camila Garcia</h3>
+          <h3 class="small-header">Camila Garcia</h3>
           <p class="small-text">Marketing</p>
         </li>
 
@@ -120,18 +120,19 @@
             width="264"
             height="260"
           />
-          <h3 class="medium-header">Daniel Wilson</h3>
+          <h3 class="small-header">Daniel Wilson</h3>
           <p class="small-text">UI Designer</p>
         </li>
       </ul>
     </section>
 
+    <!-- Section 4-->
     <section>
-      <h2 class="big-header">Our Portfolio</h2>
+      <h2 class="medium-header">Our Portfolio</h2>
       <ul>
         <li>
           <img src="images/banking-app.jpg" alt="Banking App" width="360" />
-          <h3 class="medium-header">Banking App</h3>
+          <h3 class="small-header">Banking App</h3>
           <p class="small-text">App</p>
         </li>
         <li>
@@ -140,7 +141,7 @@
             alt="Cashless Payment"
             width="360"
           />
-          <h3 class="medium-header">Cashles Payment</h3>
+          <h3 class="small-header">Cashles Payment</h3>
           <p class="small-text">Marketing</p>
         </li>
         <li>
@@ -149,12 +150,12 @@
             alt="Meditation App"
             width="360"
           />
-          <h3 class="medium-header">Meditation App</h3>
+          <h3 class="small-header">Meditation App</h3>
           <p class="small-text">Meditation App</p>
         </li>
         <li>
           <img src="images/taxi-service.jpg" alt="Taxi Service" width="360" />
-          <h3 class="medium-header">Taxi Service</h3>
+          <h3 class="small-header">Taxi Service</h3>
           <p class="small-text">Marketing</p>
         </li>
         <li>
@@ -163,7 +164,7 @@
             alt="Screen Illustrations"
             width="360"
           />
-          <h3 class="medium-header">Screen Illustrations</h3>
+          <h3 class="small-header">Screen Illustrations</h3>
           <p class="small-text">Design</p>
         </li>
         <li>
@@ -172,7 +173,7 @@
             alt="Online Courses"
             width="360"
           />
-          <h3 class="medium-header">Online Courses</h3>
+          <h3 class="small-header">Online Courses</h3>
           <p class="small-text">Marleting</p>
         </li>
       </ul>
