--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     </header>
 
     <!-- Section 1-->
-      <section class="section_bir">
-        <h1 class="hero-text">Effective Solutions for Your Business</h1>
+      <section class="hero-section">
+        <h1 class="hero-header">Effective Solutions for Your Business</h1>
         <button class="order-button">Get Order</button>
       </section>
     
@@ -58,23 +58,23 @@
     <section>
       <ul>
         <li>
-          <h3 class="small-header">Strategy</h3>
+          <h3 class="features-header">Strategy</h3>
           <p class="features-text">
             Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
           </p>
           <h3 class="features-header">Punctuality</h3>
-          <p class="small-header">
+          <p class="features-text">
             Bring the key message to the brand's audience for the best price
             within the shortest possible time.
           </p>
           <h3 class="features-header">Diligence</h3>
-          <p class="small-header">
+          <p class="features-text">
             Research and confirm brands that present the strongest digital
             growth opportunities and minimize risk.
           </p>
           <h3 class="features-header">Technologies</h3>
-          <p class="small-header">
+          <p class="features-text">
             Design practice focused on digital experiences. We bring forth a
             deep passion for problem-solving.
           </p>
