--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </ul>
     </section>
 <!-- Section 3-->
-    <section class="team-info">
+    <section class="our-team-section">
       <h2 class="medium-header">Our Team</h2>
       <ul>
         <li class="team-cards">
