--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
       </address>
     </header>
 
-    <!-- Section 1-->
+    <!-- SECTION-1-->
       <section class="hero-section">
         <h1 class="hero-header">Effective Solutions for Your Business</h1>
         <button class="order-button">Get Order</button>
       </section>
-    
+    <!-- SECTION-1 BİTTİ-->
 
-   <!-- Section 2-->
+   <!-- SECTION-2-->
     <section>
       <ul>
         <li>
@@ -81,7 +81,8 @@
         </li>
       </ul>
     </section>
-<!-- Section 3-->
+    
+<!-- SECTION-3-->
     <section class="our-team-section">
       <h2 class="medium-header">Our Team</h2>
       <ul>
@@ -126,7 +127,7 @@
       </ul>
     </section>
 
-    <!-- Section 4-->
+    <!-- SECTION-4-->
     <section>
       <h2 class="medium-header">Our Portfolio</h2>
       <ul>
