--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </ul>
       </address>
     </header>
-
+<main>
     <!-- SECTION-1-->
       <section class="hero-section">
         <h1 class="hero-header">Effective Solutions for Your Business</h1>
@@ -179,6 +179,7 @@
         </li>
       </ul>
     </section>
+    </main>
 
     <footer class="footer-design">
       <a href="">
