--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <ul>
         <li class="team-cards">
           <img
-            src="images/mark.jpg"
+            src="./images/mark.jpg"
             alt="Mark Guerrero"
             width="264"
             height="260"
@@ -98,14 +98,14 @@
         </li>
 
         <li class="team-cards">
-          <img src="images/tom.jpg" alt="Tom Ford" width="264" height="260" />
+          <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" />
           <h3 class="small-header">Tom Ford</h3>
           <p class="small-text">Frontend Developer</p>
         </li>
 
         <li class="team-cards">
           <img
-            src="images/camila.jpg"
+            src="./images/camila.jpg"
             alt="Camila Garcia"
             width="264"
             height="260"
@@ -116,7 +116,7 @@
 
         <li class="team-cards">
           <img
-            src="images/daniel.jpg"
+            src="./images/daniel.jpg"
             alt="Daniel Wilson"
             width="264"
             height="260"
@@ -132,7 +132,7 @@
       <h2 class="medium-header">Our Portfolio</h2>
       <ul>
         <li>
-          <img src="images/banking-app.jpg" alt="Banking App" width="360" />
+          <img src="./images/banking-app.jpg" alt="Banking App" width="360" />
           <h3 class="small-header">Banking App</h3>
           <p class="small-text">App</p>
         </li>
@@ -142,26 +142,26 @@
             alt="Cashless Payment"
             width="360"
           />
-          <h3 class="small-header">Cashles Payment</h3>
+          <h3 class="small-header">Cashless Payment</h3>
           <p class="small-text">Marketing</p>
         </li>
         <li>
           <img
-            src="images/meditation-app.jpg"
+            src="./images/meditation-app.jpg"
             alt="Meditation App"
             width="360"
           />
           <h3 class="small-header">Meditation App</h3>
-          <p class="small-text">Meditation App</p>
+          <p class="small-text"> App</p>
         </li>
         <li>
-          <img src="images/taxi-service.jpg" alt="Taxi Service" width="360" />
+          <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" />
           <h3 class="small-header">Taxi Service</h3>
           <p class="small-text">Marketing</p>
         </li>
         <li>
           <img
-            src="images/screen-illustrations.jpg"
+            src="./images/screen-illustrations.jpg"
             alt="Screen Illustrations"
             width="360"
           />
@@ -170,12 +170,12 @@
         </li>
         <li>
           <img
-            src="images/online-courses.png"
+            src="./images/online-courses.png"
             alt="Online Courses"
             width="360"
           />
           <h3 class="small-header">Online Courses</h3>
-          <p class="small-text">Marleting</p>
+          <p class="small-text">Marketing</p>
         </li>
       </ul>
     </section>
