--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     <!-- SECTION-1 BİTTİ-->
 
    <!-- SECTION-2-->
-    <section>
+    <section class="section-two">
+      <h2></h2>
       <ul>
         <li>
           <h3 class="features-header">Strategy</h3>
@@ -138,7 +139,7 @@
         </li>
         <li>
           <img
-            src="images/cashless-payment.jpg"
+            src="./images/cashless-payment.jpg"
             alt="Cashless Payment"
             width="360"
           />
@@ -170,7 +171,7 @@
         </li>
         <li>
           <img
-            src="./images/online-courses.png"
+            src="./images/online-courses.jpg"
             alt="Online Courses"
             width="360"
           />
