--- a/index.html
+++ b/index.html
@@ -64,16 +64,22 @@
             Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
           </p>
+          </li>
+          <li>
           <h3 class="features-header">Punctuality</h3>
           <p class="features-text">
             Bring the key message to the brand's audience for the best price
             within the shortest possible time.
           </p>
+          </li>
+          <li>
           <h3 class="features-header">Diligence</h3>
           <p class="features-text">
             Research and confirm brands that present the strongest digital
             growth opportunities and minimize risk.
           </p>
+          </li>
+          <li>
           <h3 class="features-header">Technologies</h3>
           <p class="features-text">
             Design practice focused on digital experiences. We bring forth a
@@ -183,10 +189,10 @@
     </main>
 
     <footer class="footer-design">
-      <a href="">
-        <img class="logo-font" src="images/footer-logo.png" alt="Footer Logo" />
-      </a>
+      <a href="" class="logo-font">
       <span class="logo-text">Studio</span>
+      </a>
+      
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
