--- a/index.html
+++ b/index.html
@@ -46,153 +46,162 @@
         </ul>
       </address>
     </header>
-<main>
-    <!-- SECTION-1-->
+    <main>
+      <!-- SECTION-1-->
       <section class="hero-section">
         <h1 class="hero-header">Effective Solutions for Your Business</h1>
         <button class="order-button">Get Order</button>
       </section>
-    <!-- SECTION-1 BİTTİ-->
+      <!-- SECTION-1 BİTTİ-->
 
-   <!-- SECTION-2-->
-    <section class="section-two">
-      <h2></h2>
-      <ul>
-        <li>
-          <h3 class="features-header">Strategy</h3>
-          <p class="features-text">
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
+      <!-- SECTION-2-->
+      <section class="section-two">
+        <h2></h2>
+        <ul>
+          <li>
+            <h3 class="features-header">Strategy</h3>
+            <p class="features-text">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
           </li>
           <li>
-          <h3 class="features-header">Punctuality</h3>
-          <p class="features-text">
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
+            <h3 class="features-header">Punctuality</h3>
+            <p class="features-text">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
           </li>
           <li>
-          <h3 class="features-header">Diligence</h3>
-          <p class="features-text">
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
+            <h3 class="features-header">Diligence</h3>
+            <p class="features-text">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
           </li>
           <li>
-          <h3 class="features-header">Technologies</h3>
-          <p class="features-text">
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
-    </section>
-    
-<!-- SECTION-3-->
-    <section class="our-team-section">
-      <h2 class="medium-header">Our Team</h2>
-      <ul>
-        <li class="team-cards">
-          <img
-            src="./images/mark.jpg"
-            alt="Mark Guerrero"
-            width="264"
-            height="260"
-          />
-          <h3 class="small-header">Mark Guerrero</h3>
-          <p class="small-text">Product Designer</p>
-        </li>
+            <h3 class="features-header">Technologies</h3>
+            <p class="features-text">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
 
-        <li class="team-cards">
-          <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" />
-          <h3 class="small-header">Tom Ford</h3>
-          <p class="small-text">Frontend Developer</p>
-        </li>
+      <!-- SECTION-3-->
+      <section class="our-team-section">
+        <h2 class="medium-header">Our Team</h2>
+        <ul>
+          <li class="team-cards">
+            <img
+              src="./images/mark.jpg"
+              alt="Mark Guerrero"
+              width="264"
+              height="260"
+            />
+            <h3 class="small-header">Mark Guerrero</h3>
+            <p class="small-text">Product Designer</p>
+          </li>
 
-        <li class="team-cards">
-          <img
-            src="./images/camila.jpg"
-            alt="Camila Garcia"
-            width="264"
-            height="260"
-          />
-          <h3 class="small-header">Camila Garcia</h3>
-          <p class="small-text">Marketing</p>
-        </li>
+          <li class="team-cards">
+            <img
+              src="./images/tom.jpg"
+              alt="Tom Ford"
+              width="264"
+              height="260"
+            />
+            <h3 class="small-header">Tom Ford</h3>
+            <p class="small-text">Frontend Developer</p>
+          </li>
 
-        <li class="team-cards">
-          <img
-            src="./images/daniel.jpg"
-            alt="Daniel Wilson"
-            width="264"
-            height="260"
-          />
-          <h3 class="small-header">Daniel Wilson</h3>
-          <p class="small-text">UI Designer</p>
-        </li>
-      </ul>
-    </section>
+          <li class="team-cards">
+            <img
+              src="./images/camila.jpg"
+              alt="Camila Garcia"
+              width="264"
+              height="260"
+            />
+            <h3 class="small-header">Camila Garcia</h3>
+            <p class="small-text">Marketing</p>
+          </li>
 
-    <!-- SECTION-4-->
-    <section>
-      <h2 class="medium-header">Our Portfolio</h2>
-      <ul>
-        <li>
-          <img src="./images/banking-app.jpg" alt="Banking App" width="360" />
-          <h3 class="small-header">Banking App</h3>
-          <p class="small-text">App</p>
-        </li>
-        <li>
-          <img
-            src="./images/cashless-payment.jpg"
-            alt="Cashless Payment"
-            width="360"
-          />
-          <h3 class="small-header">Cashless Payment</h3>
-          <p class="small-text">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/meditation-app.jpg"
-            alt="Meditation App"
-            width="360"
-          />
-          <h3 class="small-header">Meditation App</h3>
-          <p class="small-text"> App</p>
-        </li>
-        <li>
-          <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" />
-          <h3 class="small-header">Taxi Service</h3>
-          <p class="small-text">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/screen-illustrations.jpg"
-            alt="Screen Illustrations"
-            width="360"
-          />
-          <h3 class="small-header">Screen Illustrations</h3>
-          <p class="small-text">Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/online-courses.jpg"
-            alt="Online Courses"
-            width="360"
-          />
-          <h3 class="small-header">Online Courses</h3>
-          <p class="small-text">Marketing</p>
-        </li>
-      </ul>
-    </section>
+          <li class="team-cards">
+            <img
+              src="./images/daniel.jpg"
+              alt="Daniel Wilson"
+              width="264"
+              height="260"
+            />
+            <h3 class="small-header">Daniel Wilson</h3>
+            <p class="small-text">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- SECTION-4-->
+      <section>
+        <h2 class="medium-header">Our Portfolio</h2>
+        <ul>
+          <li>
+            <img src="./images/banking-app.jpg" alt="Banking App" width="360" />
+            <h3 class="small-header">Banking App</h3>
+            <p class="small-text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/cashless-payment.jpg"
+              alt="Cashless Payment"
+              width="360"
+            />
+            <h3 class="small-header">Cashless Payment</h3>
+            <p class="small-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/meditation-app.jpg"
+              alt="Meditation App"
+              width="360"
+            />
+            <h3 class="small-header">Meditation App</h3>
+            <p class="small-text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/taxi-service.jpg"
+              alt="Taxi Service"
+              width="360"
+            />
+            <h3 class="small-header">Taxi Service</h3>
+            <p class="small-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/screen-illustrations.jpg"
+              alt="Screen Illustrations"
+              width="360"
+            />
+            <h3 class="small-header">Screen Illustrations</h3>
+            <p class="small-text">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/online-courses.jpg"
+              alt="Online Courses"
+              width="360"
+            />
+            <h3 class="small-header">Online Courses</h3>
+            <p class="small-text">Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer class="footer-design">
-      <a href="" class="logo-font">
-      <span class="logo-text">Studio</span>
+      <a href="" class="logo-font">WEB
+        <span class="footer-logo-text">Studio</span>
       </a>
-      
+
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
