--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
     <footer class="footer-design">
       <a href="" class="logo-font">WEB
-        <span class="footer-logo-text">Studio</span>
+        <span class="footer-logo">Studio</span>
       </a>
 
       <p class="footer-text">
